--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   google_fonts: ^6.1.0
   lottie: ^2.7.0
   font_awesome_flutter: ^10.6.0
+  fl_chart: ^0.65.0
+  intl: ^0.18.1
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
