--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   confetti: ^0.7.0
   image_picker: ^1.0.4
   dotted_border: ^2.1.0
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.20.0
+  google_sign_in: ^6.2.1
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   flutter_test:
